# crate

./: .gitignore  .pre-commit-config.yaml  API_FIRST_VERIFICATION.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_CANCEL.sh  DEBUG_CANCEL_LOG.sh  IMPLEMENTATION_PLAN.md  INSTALLATION.md  LICENSE  MANIFEST.in  MANUAL_TESTING.md  MANUAL_TESTING_CHECKLIST.md  Makefile  OPENCLAW.md  README.md  REFACTORING_SUMMARY.md  SHIP_CHECKLIST.md  TEMPLATE_VARIABLES.md  TUI_README.md  USAGE.md  WEB_UI_README.md  WEB_UI_SUMMARY.md  WEB_UI_TESTING.md  crate-web.sh  dj_mp3_renamer.py  djrenamer.py  pyproject.toml  pytest.ini  quick_test.sh  requirements-dev.txt  requirements-tui.txt  requirements-web.txt  requirements.txt  run_tui.py  run_web.py  setup.py  start_crate_web.sh  start_web_ui.sh  (+5 more)
.claude/: API_ENHANCEMENTS_SUMMARY.md  B2_TYPE_HINTS_PROMPT.md  B2_VERIFICATION.md  B3_INTEGRATION_TESTS_PROMPT.md  B4_CONFIG_CACHING_PROMPT.md  BEST_PRACTICES_2026.md  C1_API_ARCHITECTURE_REVIEW_PROMPT.md  C1_API_ARCHITECTURE_REVIEW_RESULTS.md  C1_API_ENHANCEMENT_BACKLOG.md  CHECKPOINT_1_COMPLETE.md  CHECKPOINT_2_COMPLETE.md  COMPLETE_SUMMARY.md  ENH001_ASYNC_OPERATIONS_PROMPT.md  MAC_MAINTENANCE_ANALYSIS.md  OVERNIGHT_SESSION_SUMMARY.md  README.md  ROADMAP_2025_2026.md  TASKS.md  codebase_review.md  settings.local.json  state.md
.claude/knowledge-base/: RECOVERY.md  active-tasks-2026-01-29.md  best-practices.md  claude-coding-excellence-guide.md  coding-standards.md  lessons-learned.md  new-tasks-2026-01-29.md  project-readme.md  remember-last-directory-best-practices.md  tech-stack-decisions.md
.claude/knowledge-base/bugs/: backend-cancellation-limitation.md  bug-analysis-2026-01-30.md  bug-rename-button-active.md  cancel-button-backend-limitation.md  debugging-per-album-banner-issue.md  red-flags-analysis-per-album-detection.md  rollback-plan-per-album-detection.md
.claude/knowledge-base/business-logic/: business-logic-low-friction-smart-detection.md  business-logic-massive-library-edge-cases.md  comprehensive-business-logic-ux-review.md  metadata-lookup-logic.md
.claude/knowledge-base/designs/: crate-rebrand-file-naming-strategy.md  design-low-friction-automation.md  design-massive-library-batch-processing.md  design-per-album-smart-detection.md  ui-design-per-album-selection.md
.claude/knowledge-base/implementations/: complete-implementation-summary.md  https-implementation.md  implementation-plan-auto-select-files.md  implementation-plan-essentia-migration.md  implementation-plan-remember-last-directory.md  implementation-progress-per-album-detection.md  implementation-session-summary.md  implementation-summary-2026-01-30-session-2.md  implementation-summary-task-88-essentia.md  implementation-tasks-126-131-summary.md  task-45-implementation.md  task-46-variable-audit.md  task-47-implementation.md  task-48-implementation.md  task-53-57-smart-detection-implementation.md  task-53-smart-track-detection-design.md  task-58-implementation.md  task-59-implementation.md  task-60-implementation.md  task-61-implementation.md  task-62-implementation.md  task-63-implementation.md  task-64-implementation.md  task-65-implementation.md  task-66-implementation.md  task-67-implementation.md  task-68-implementation.md  task-69-implementation.md
.claude/knowledge-base/research/: app-naming-research-2025-2026.md  dj-naming-conventions-research-2025-2026.md  essentia-migration-overview.md  (+6 more)
.claude/rules/: self-review.md  systematic-reasoning.md
.claude/state/: current-state.md  ship-progress.md
.claude/templates/: pre-publish-checklist.md
.claude/workflows/: feature-development.md
.githooks/: pre-push
.github/workflows/: node-ci.yml  python-ci.yml
.local/: AUDIT-GATES.md
claude/: lessons-learned.md
crate/: __init__.py  __main__.py
crate/api/: __init__.py  clip_repair.py  cue_detection.py  limiter.py  models.py  normalization.py  pitch_correction.py  renamer.py  warmth.py
crate/cli/: logging_config.py  main.py
crate/core/: __init__.py  audio_analysis.py  audio_analysis_essentia.py  audio_analysis_parallel.py  clip_repair.py  config.py  conflict_resolution.py  context_detection.py  cue_detection.py  io.py  key_conversion.py  limiter.py  metadata_parsing.py  normalization.py  pitch_correction.py  sanitization.py  template.py  validation.py  warmth.py
crate/tui/: __init__.py  app.py
dj_mp3_renamer/: __init__.py  __main__.py
dj_mp3_renamer/api/: __init__.py  models.py  renamer.py
dj_mp3_renamer/cli/: __init__.py  logging_config.py  main.py
dj_mp3_renamer/core/: audio_analysis.py  config.py  conflict_resolution.py  io.py  key_conversion.py  metadata_parsing.py  template.py
dj_mp3_renamer/tui/: app.py
docs/: AI_WORKFLOW.md  API.md  CLI.md  GETTING_STARTED.md  INTEGRATIONS.md  PROJECT_TEMPLATE.md
examples/hello-api/: README.md
scripts/: benchmark_config.py  context-pack.sh  golden-path-test.sh  install-hooks.sh  make_cli_screenshot.py  new-project.sh  verify.sh
tests/: __init__.py  test_analyze_context_endpoint.py  test_api.py  test_api_async.py  test_api_config.py  test_api_metadata.py  test_api_preview.py  test_api_template.py  test_cli.py  test_clip_repair.py  test_config.py  test_conflict_resolution.py  test_context_detection.py  test_cue_detection.py  test_first_run.py  test_golden_path.py  test_integration.py  test_io.py  test_key_conversion.py  test_limiter.py  test_metadata_parsing.py  test_normalization.py  test_pitch_correction.py  test_sanitization.py  test_template.py  test_undo_endpoint.py  test_validation.py  test_warmth.py  test_web_api.py
variants/: README.md
variants/nextjs/: Makefile  README.md
variants/node-ts/: Makefile  README.md  package.json  tsconfig.json
variants/python-fastapi/: Makefile  README.md  pyproject.toml  requirements-dev.txt
variants/python-fastapi/.github/workflows/: ci.yml
variants/python-fastapi/src/app/: main.py
variants/python-fastapi/tests/: test_health.py
web/: README.md  __init__.py  main.py  server.py  streaming.py
web/static/: browserconfig.xml  index.html  site.webmanifest
web/templates/: index.html
(+32 files in other folders)
