[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-mp3-renamer"
version = "2.0.0"
description = "Rename MP3 files using metadata into DJ-friendly filenames"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["mp3", "rename", "metadata", "id3", "dj", "music", "audio"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mutagen>=1.46.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "mypy>=1.4.0",
    "ruff>=0.0.280",
]

[project.scripts]
dj-mp3-renamer = "dj_mp3_renamer.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/dj-mp3-renamer"
Repository = "https://github.com/yourusername/dj-mp3-renamer"
Issues = "https://github.com/yourusername/dj-mp3-renamer/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N"]
ignore = []

[tool.coverage.run]
source = ["dj_mp3_renamer"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
