[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crate"
version = "0.1.0"
description = "Your music library, organized. Rename MP3 files using metadata into DJ-friendly filenames."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mp3", "rename", "metadata", "id3", "dj", "music", "audio"]
authors = [
    {name = "Steve Zenone", email = "steve@zenone.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mutagen>=1.46.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Audio analysis backends (Task #88)
# Tier 1: Recommended (best performance, 2x faster, more accurate)
audio-essentia = [
    "essentia>=2.1b6.dev1389",
    "numpy>=1.25",
]

# Tier 2: Alternative/Fallback (better compatibility, pure Python)
audio-librosa = [
    "librosa>=0.10.0",
    "numpy>=1.25",
    "soundfile>=0.12.0",
]

# Database lookup for metadata
audio-acoustid = [
    "pyacoustid>=1.3.0",
]

# Full audio analysis (recommended for DJ use)
audio = [
    "crate[audio-essentia]",
    "crate[audio-librosa]",
    "crate[audio-acoustid]",
]

# Web interface
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

# Complete installation (all features)
all = [
    "crate[audio]",
    "crate[web]",
]

# Development dependencies
dev = [
    "crate[all]",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.27.0",  # Required for FastAPI TestClient
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[project.scripts]
crate = "crate.cli.main:main"
crate-tui = "crate.tui:run_tui"

[project.urls]
Homepage = "https://github.com/zenone/crate"
Repository = "https://github.com/zenone/crate"
Issues = "https://github.com/zenone/crate/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short", "--disable-warnings"]
markers = [
    "unit: Unit tests for pure functions",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# black config removed: using ruff format instead
# [tool.black]
# line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Future: enable stricter settings as codebase matures
# disallow_untyped_defs = true
# strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, W = pycodestyle warnings
# I = isort, N = pep8-naming, B = flake8-bugbear, UP = pyupgrade
select = ["E", "F", "W", "I", "N", "B", "UP"]
# E501: line length handled by formatter
# N818: allow domain-specific exception names (e.g., InvalidTagError)
# UP006/UP007/UP015/UP030/UP032/UP035/UP045: Keep typing syntax as-is for now
#   Future: run `ruff check --fix --select=UP006` to modernize type annotations
# B023: loop variable binding (requires careful review)
# B904: raise-from in exception handlers (requires careful review)
ignore = ["E501", "N818", "UP006", "UP007", "UP015", "UP030", "UP032", "UP035", "UP045", "B023", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # Allow assert False in tests

[tool.coverage.run]
source = ["crate", "web"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
